@@ -77,9 +77,6 @@ Recent Bugs
 * crashes during photonmap raytrace of m35 where right node is invalid
   rt -o test.pix -V 1.0 -P4 -J0 -l7 -A0 ~/Desktop/m35.g all.g box.r sph.r
 
-* "touch file.g && mged -c file.g units m" results in a BU_ASSERT
-  failure and bombs.
-
 * libfb cannot utilize standard output/error "device" files without
   path trickery.  it recognizes the /dev/ prefix and presumes it's a
   libfb device instead of a filesystem device.
